<?xml version="1.0" encoding="utf-8"?>
<resources>
<!--  
    <string name="menu_search">search</string>
    <string name="show">Show</string>
    <string name="menu_overflow">overflow</string>
    <string name="appname">GS_module_314</string>
    <string name="back">GS_module_29</string>
    <string name="download">GS_module_28</string>
    <string name="no_application">GS_module_3309</string>
    <string name="getapplistfail">GS_module_3359</string>
    <string name="loading">GS_module_3361</string>
    <string name="no_selected_item">GS_module_14005</string>
    <string name="to_open">GS_module_67</string>
    <string name="to_download">GS_module_3339</string>
    <string name="to_update">GS_module_71</string>
    <string name="charge">GS_module_3354</string>
    <string name="free">GS_module_3351</string>
    <string name="hot_label">GS_module_3363</string>
    <string name="app_label">GS_module_3364</string>
    <string name="game_label">GS_module_3365</string>
    <string name="tools_label">GS_module_3366</string>
    <string name="installed">GS_module_3306</string>
    <string name="downloading">GS_module_3334</string>
    <string name="comment">GS_module_3373</string>
    <string name="rating">GS_module_3372</string>
    <string name="rate_comment">GS_module_3374</string>
    <string name="comment_hint">GS_module_3371</string>
    <string name="version">GS_module_3337</string>
    <string name="submit">GS_module_3375</string>
    <string name="publishtime">GS_module_3330</string>
    <string name="description">GS_module_3329</string>
    <string name="load_more_comment">GS_module_19003</string>
    <string name="new_version">GS_module_3370</string>
    <string name="current_version">GS_module_3369</string>
    <string name="installing">GS_module_3356</string>
    <string name="to_install">GS_module_2016</string>
    <string name="comment_success">GS_module_3377</string>
    <string name="comment_failed">GS_module_3378</string>
    <string name="commenting">GS_module_3376</string>
    <string name="empty_waring">GS_module_16429</string>
    <string name="wating">GS_module_3314</string>
    <string name="get_comment_failed">GS_module_3379</string>
-->
<string name="menu_search">search</string>
    <string name="show">Show</string>
    <string name="menu_overflow">overflow</string>
    <string name="appname">GS Market</string>
    <string name="back">Back</string>
    <string name="download">Download</string>
    <string name="no_application">No application!</string>
    <string name="getapplistfail">Failed to get application list!</string>
    <string name="loading">Loading...</string>
    <string name="no_selected_item">No item is selected!</string>
    <string name="to_open">Open</string>
    <string name="to_download">to download</string>
    <string name="to_update">Update</string>
    <string name="charge">Charge</string>
    <string name="free">Free</string>
    <string name="hot_label">Hot</string>
    <string name="app_label">App</string>
    <string name="game_label">Game</string>
    <string name="tools_label">Tools</string>
    <string name="installed">Installed</string>
    <string name="downloading">Downloading...</string>
    <string name="comment">Comment</string>
    <string name="rating">Rating</string>
    <string name="rate_comment">Rate and comment</string>
    <string name="comment_hint">Add comment here...</string>
    <string name="version">Version</string>
    <string name="submit">Submit</string>
    <string name="publishtime">Publish date</string>
    <string name="description">Description</string>
    <string name="load_more_comment">Loading more...</string>
    <string name="new_version">New version</string>
    <string name="current_version">Current version</string>
    <string name="installing">is installing...</string>
    <string name="to_install">Install</string>
    <string name="comment_success">Submitted successfully!</string>
    <string name="comment_failed">Submit failed!</string>
    <string name="commenting">Submitting...Please wait.</string>
    <string name="wating">Waiting...</string>
    <string name="get_comment_failed">Get comment failed!</string>
    <string name="cancel">Cancel</string>
    <string name="can_update">Can be updated</string>
    <string name="update_fail">Update failed!</string>
    <string name="uninstalled">Uninstalled</string>
    <string name="waiting">Waiting...</string>
    <string name="download_fail">Download failed!</string>
    <string name="install_fail">Install failed!</string>
    <string name="no_load">No load</string>
    <string name="storage">Storage</string>
    <string name="empty_waring"> Content can not be empty!</string>
    <string name="low_space_promt">No enough storage space. Please clean up!</string>
    <string name="read_data_fail_promt">Data reading failed. Please restart!</string>
    <string name="pkg_exist">already exists in the download list!</string>
    <string name="app_exist">The App already exists!</string>
    <string name="fail_get_apk_info">Failed to get the apk info!</string>
    <string name="url_error">Wrong URI!</string>
    <string name="down_install">Download/Install</string>
    <string name="delete_record">Delete recording</string>
    <string name="uninstall">Uninstall</string>
    <string name="menu">Menu</string>
    <string name="open">Open</string>
    <string name="update">Update</string>
    <string name="apps">app (s)</string>
    <string name="download_success">downloaded successfully!</string>
    <string name="installed_success">installed successfully!</string>
    <string name="update_success">is updated successfully!</string>
    <string name="update_failed">is updated unsuccessfully!</string>
    <string name="update_to">Update to</string>
    <string name="app_detail">App details</string>
    <string name="app_in_list">app (s) in list</string>
    <string name="app_down_fail">app (s) download/ update failed!</string>
    <string name="fail_promt">Failure notification</string>
</resources>