<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/actionbar_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/menu_exp"
        android:icon="@drawable/actionbar_overflow"
        android:showAsAction="always"
        android:title="@string/menu_overflow">
        <menu>
            <item
                android:id="@+id/history"
                android:title="@string/download"
                android:showAsAction="ifRoom|withText">
            </item>
            <item
                android:id="@+id/installed"
                android:title="@string/installed"
                android:showAsAction="ifRoom|withText">
            </item>
        </menu>
    </item>

</menu>