<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/appdatil_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_detial_info_layout_height"
            android:background="@color/textvolor_e4e4e4" >

            <ImageView
                android:id="@+id/app_image"
                android:layout_width="@dimen/appsize_width"
                android:layout_height="@dimen/appsize_width"
                android:layout_marginLeft="@dimen/contact_50dp"
                android:layout_marginTop="@dimen/contact_10dp"
                android:src="@drawable/gs_market" />

            <RatingBar
                android:id="@+id/detial_rating"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/contact_25dp"
                android:layout_below="@id/app_image"
                android:layout_marginLeft="@dimen/contact_30dp"
                android:layout_marginTop="@dimen/search_button_marginright"
                android:isIndicator="true"
                android:numStars="5"
                android:progressDrawable="@drawable/rating_bar_large"
                android:rating="2.5" />

            <TextView
                android:id="@+id/appname"
                android:layout_width="@dimen/download_pb_progress_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/contact_50dp"
                android:layout_toRightOf="@id/app_image"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_20sp" />

            <TextView
                android:id="@+id/appSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/appname"
                android:layout_marginLeft="@dimen/contact_50dp"
                android:layout_toRightOf="@id/app_image"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/textvolor_414141"
                android:textSize="@dimen/textsize_14sp" />

            <TextView
                android:id="@+id/downTimes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/appname"
                android:layout_marginLeft="@dimen/contact_50dp"
                android:layout_toRightOf="@id/appSize"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/textvolor_414141"
                android:textSize="@dimen/textsize_14sp" />

            <TextView
                android:id="@+id/publishTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/downTimes"
                android:layout_marginLeft="@dimen/contact_50dp"
                android:layout_toRightOf="@id/app_image"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/textvolor_414141"
                android:textSize="@dimen/textsize_14sp" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/downTimes"
                android:layout_marginLeft="@dimen/contact_50dp"
                android:layout_toRightOf="@id/publishTime"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/textvolor_414141"
                android:textSize="@dimen/textsize_14sp" />

            <!--
                 <TextView
                android:id="@+id/downButton"
                android:layout_width="@dimen/down_button_width"
                android:layout_height="@dimen/down_button_height"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/contact_10dp"
                android:layout_marginLeft="@dimen/contact_50dp"
                android:layout_marginTop="@dimen/contact_10dp"
                android:layout_toRightOf="@id/app_image"
                android:background="@drawable/app_down_button_green"
                android:drawableLeft="@drawable/btn_icon_download"
                android:drawablePadding="-40dp"
                android:gravity="center"
                android:paddingLeft="50dp"
                android:singleLine="true"
                android:text="@string/to_download"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_20sp" />
            -->

            <LinearLayout
                android:id="@+id/detail_downLayout"
                android:layout_width="@dimen/detail_down_button_width"
                android:layout_height="@dimen/down_button_height"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/contact_50dp"
                android:layout_marginTop="@dimen/contact_10dp"
                android:layout_toRightOf="@id/app_image"
                android:background="@drawable/app_down_button_blue"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/detail_downBtnimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:src="@drawable/btn_icon_download" />

                <TextView
                    android:id="@+id/detail_downButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/contact_15dp"
                    android:singleLine="true"
                    android:text="@string/to_download"
                    android:focusable="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_22px" />
            </LinearLayout>

           <!--  <TextView
                android:id="@+id/previous_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/contact_10dp"
                android:layout_marginLeft="@dimen/contact_50dp"
                android:layout_toRightOf="@id/detail_downLayout"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/textvolor_3b86dc"
                android:textSize="@dimen/textsize_14sp" /> -->
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white" >

            <TextView
                android:id="@+id/Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/contact_20dp"
                android:layout_marginRight="@dimen/contact_80dp"
                android:layout_marginTop="@dimen/contact_10dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/description"
                android:textColor="@color/textvolor_3b86dc"
                android:textSize="@dimen/textsize_16sp" />

            <TextView
                android:id="@+id/description_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Description"
                android:layout_marginLeft="@dimen/contact_20dp"
                android:layout_marginRight="@dimen/contact_80dp"
                android:layout_marginTop="@dimen/contact_10dp"
                android:text="@string/loading"
                android:textSize="@dimen/textsize_16sp" />

            <TextView
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/description_content"
                android:layout_marginLeft="@dimen/contact_20dp"
                android:layout_marginRight="@dimen/contact_20dp"
                android:layout_marginTop="@dimen/contact_10dp"
                android:background="@drawable/bitmap_repate" />

            <!-- <ImageView
                android:id="@+id/more_descroption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/line"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/contact_20dp"
                android:layout_marginRight="@dimen/contact_20dp"
                android:src="@drawable/descroption_more_down" />

            <TextView
                android:id="@+id/Comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/line"
                android:layout_marginLeft="@dimen/contact_20dp"
                android:layout_marginRight="@dimen/contact_80dp"
                android:layout_marginTop="@dimen/contact_10dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/rate_comment"
                android:textColor="@color/textvolor_3b86dc"
                android:textSize="@dimen/textsize_18sp" />

            <TextView
                android:id="@+id/rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Comment"
                android:layout_marginLeft="@dimen/contact_20dp"
                android:layout_marginRight="@dimen/contact_30dp"
                android:layout_marginTop="@dimen/contact_10dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/rating"
                android:textColor="@color/textvolor_3b86dc"
                android:textSize="@dimen/textsize_18sp" />

            <RatingBar
                android:id="@+id/set_rating"
                style="@style/MyRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Comment"
                android:layout_marginRight="@dimen/contact_80dp"
                android:layout_marginTop="@dimen/contact_10dp"
                android:layout_toRightOf="@id/rating_text"
                android:numStars="5"
                android:progressDrawable="@drawable/rating_bar_large"
                android:rating="1"
                android:textSize="@dimen/textsize_18sp" />

            <TextView
                android:id="@+id/rcomment_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rating_text"
                android:layout_marginLeft="@dimen/contact_20dp"
                android:layout_marginRight="@dimen/contact_30dp"
                android:layout_marginTop="@dimen/contact_10dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/comment"
                android:textColor="@color/textvolor_3b86dc"
                android:textSize="@dimen/textsize_18sp" />

            <EditText
                android:id="@+id/comment_edit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/contact_120dp"
                android:layout_below="@id/rating_text"
                android:layout_marginRight="@dimen/contact_20dp"
                android:layout_marginTop="@dimen/contact_15dp"
                android:layout_toRightOf="@id/rcomment_text"
                android:background="@drawable/textfield_disable"
                android:gravity="left"
                android:hint="@string/comment_hint"
                android:paddingLeft="@dimen/contact_20dp"
                android:paddingTop="@dimen/contact_10dp"
                android:textColor="@color/textvolor_8f8f8f" />

            <Button
                android:id="@+id/subment"
                android:layout_width="@dimen/down_button_width"
                android:layout_height="@dimen/down_button_height"
                android:layout_alignParentRight="true"
                android:layout_below="@id/comment_edit"
                android:layout_marginRight="@dimen/contact_20dp"
                android:layout_marginTop="@dimen/contact_10dp"
                android:background="@drawable/app_down_button_blue"
                android:text="@string/submit"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/subment"
                android:layout_marginLeft="@dimen/contact_20dp"
                android:layout_marginRight="@dimen/contact_20dp"
                android:layout_marginTop="@dimen/contact_10dp"
                android:background="@drawable/bitmap_repate"
                android:visibility="gone" />

            <com.base.module.pack.main.ListViewForScrollView
                android:id="@+id/comment_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/line1"
                android:layout_marginLeft="@dimen/contact_20dp"
                android:layout_marginRight="@dimen/contact_20dp"
                android:layout_marginTop="@dimen/contact_10dp"
                android:divider="@null" />
            android:divider="@drawable/dotted_line"

            <Button
                android:id="@+id/load_more_comment"
                android:layout_width="@dimen/down_button_width"
                android:layout_height="@dimen/down_button_height"
                android:layout_below="@id/comment_list"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/contact_10dp"
                android:layout_marginTop="@dimen/contact_10dp"
                android:background="@drawable/app_down_button_blue"
                android:text="@string/load_more_comment"
                android:textColor="@color/white"
                android:visibility="gone" /> -->
        </RelativeLayout>
    </LinearLayout>

</ScrollView>